add_executable (sz_test1 sz_compress_test.cpp)
add_executable (sz_huffman_lossless sz_huffman_lossless.cpp)
add_executable (sz_autotuning sz_autotuning_test.cpp)
add_executable (sz_highorder_test sz_highorder_test.cpp)
add_executable (sz_sampling_test sz_sampling_test.cpp)
target_include_directories (sz_test1 PRIVATE ${ZSTD_INCLUDES})
target_include_directories (sz_huffman_lossless PRIVATE ${ZSTD_INCLUDES})
target_include_directories (sz_autotuning PRIVATE ${ZSTD_INCLUDES})
target_include_directories (sz_highorder_test PRIVATE ${ZSTD_INCLUDES})
target_include_directories (sz_sampling_test PRIVATE ${ZSTD_INCLUDES})
target_include_directories (sz_test1 PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories (sz_huffman_lossless PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories (sz_autotuning PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories (sz_highorder_test PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_include_directories (sz_sampling_test PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries (sz_test1 sz_cpp)
target_link_libraries (sz_huffman_lossless sz_cpp)
target_link_libraries (sz_autotuning sz_cpp)
target_link_libraries (sz_highorder_test sz_cpp)
target_link_libraries (sz_sampling_test sz_cpp)
