add_executable (sz_test1 sz_compress_test.cpp)
add_executable (sz_huffman_lossless addtional/sz_huffman_lossless.cpp)
add_executable (sz_autotuning sz_autotuning_test.cpp)
add_executable (sz_autotuning_double sz_autotuning_double.cpp)
add_executable (sz_highorder_test addtional/sz_highorder_test.cpp)
add_executable (sz_sampling_test addtional/sz_sampling_test.cpp)
target_link_libraries (sz_test1 PRIVATE sz_cpp)
target_link_libraries (sz_huffman_lossless PRIVATE sz_cpp)
target_link_libraries (sz_autotuning PRIVATE sz_cpp)
target_link_libraries (sz_autotuning_double PRIVATE sz_cpp)
target_link_libraries (sz_highorder_test PRIVATE sz_cpp)
target_link_libraries (sz_sampling_test PRIVATE sz_cpp)

