add_executable (sz_test sz_compress_test.cpp)
add_executable (sz_huffman_lossless addtional/sz_huffman_lossless.cpp)
add_executable (sz_auto sz_autotuning.cpp)
add_executable (sz_auto_double sz_autotuning_double.cpp)
add_executable (sz_highorder_test addtional/sz_highorder_test.cpp)
add_executable (sz_sampling_test addtional/sz_sampling_test.cpp)
target_link_libraries (sz_test PRIVATE sz_cpp)
target_link_libraries (sz_huffman_lossless PRIVATE sz_cpp)
target_link_libraries (sz_auto PRIVATE sz_cpp)
target_link_libraries (sz_auto_double PRIVATE sz_cpp)
target_link_libraries (sz_highorder_test PRIVATE sz_cpp)
target_link_libraries (sz_sampling_test PRIVATE sz_cpp)

